fix: resolve global layout blocking and alignment

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,10 +4,15 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: #fff;
+}
+
 body {
-  width: 1100px;
-  margin: 0 auto;
-  font-family: Raleway, sans-serif;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  color: #000;
+  background-color: #fff;
 }
 
 h1,
@@ -27,10 +32,6 @@ blockquote {
 
 a {
   color: inherit;
-}
-
-img {
-  width: 100%;
 }
 
 button {
