--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,3 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Raleway', sans-serif;
-    background-color: #fff;
-    color: #000;
-    margin: 0;
-}
-
 .overlay {
     position: absolute;
     top: 0;
@@ -25,7 +12,7 @@ body {
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
-    padding: 92px 24px 0;
+    padding: 92px 50px 0;
     margin-bottom: 80px;
     max-width: 1100px;
     margin-left: auto;
@@ -64,6 +51,7 @@ body {
 
 .header__logo-image {
     width: 148px;
+    display: block;
 }
 
 .address {
@@ -87,7 +75,7 @@ body {
     background-image: url('../images/cover.jpg');
     background-size: cover;
     background-position: center;
-    padding: 165px 24px 50px;
+    padding: 165px 50px 50px;
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
@@ -162,7 +150,7 @@ body {
 }
 
 .lots {
-    padding: 0 24px;
+    padding: 0 50px;
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
@@ -255,11 +243,20 @@ body {
     display: grid;
     grid-template-columns: 334px 1fr;
     gap: 25px;
-    padding: 0 24px;
+    padding: 0 50px;
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 180px;
+}
+
+.about__column {
+    display: flex;
+    flex-direction: column;
+}
+
+.about__column:first-child {
+    justify-content: flex-start;
 }
 
 .about__logo {
@@ -274,6 +271,7 @@ body {
 
 .about__logo-image {
     width: 148px;
+    display: block;
 }
 
 .about__title {
@@ -298,7 +296,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: start;
-    padding: 0 24px 60px;
+    padding: 0 50px 60px;
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
@@ -349,4 +347,5 @@ body {
 
 .footer__social-icon {
     width: 48px;
+    display: block;
 }
